--- a/settings.html
+++ b/settings.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/svg+xml" href="/images/solid.svg" />
-    <title>Settings - Tauri App</title>
+    <link rel="icon" type="image/png" href="/images/app-icon.png" />
+    <title>Settings - Slate IDE</title>
   </head>
   <body spellcheck="false" autocapitalize="none" aria-autocomplete="none">
     <noscript>You need to enable JavaScript to run this app.</noscript>
